--- a/where/src/css/icon.css
+++ b/where/src/css/icon.css
@@ -44,3 +44,9 @@
 .icon-icons74:before {
   content: "\e908";
 }
+.icon-smiling-face:before {
+  content: "\eb7e";
+}
+.icon-plus:before {
+  content: "\eef0";
+}
