Mekan listeleme sayfası yapıldı

--- a/where/src/css/icon.css
+++ b/where/src/css/icon.css
@@ -26,3 +26,13 @@
 .icon-profile-male:before {
   content: "\e040";
 }
+.icon-icons185:before {content: "\e911";}
+.icon-global:before {content: "\e052";}
+.icon-layers:before {content: "\e031";}
+.icon-nightlife:before {content: "\efdb";}
+.icon-nightlife:before {content: "\efdb";}
+.icon-education:before {content: "\efd6";}
+.icon-shopping:before {content: "\efdc";}
+.icon-coffee2:before {content: "\efe3";}
+.icon-icons74:before {content: "\e908";}
+
