--- a/where/src/css/listing.css
+++ b/where/src/css/listing.css
@@ -1,66 +1,83 @@
 .searchstatus {
-    width: 100%;
-    float: left;
-    padding: 0 0 30px;
+	width: 100%;
+	float: left;
+	padding: 0 0 30px;
 }
 
-.searchstatus h1{
+.searchstatus h1 {
 	margin: 0;
 	font-size: 24px;
 	line-height: 24px;
 }
-.searchstatus h1 span{color: #908f8f;}
 
-.listingarea{
+.searchstatus h1 span {
+	color: #908f8f;
+}
+
+.listingarea {
 	overflow: hidden;
 }
 
 .listingarea .innersearch {
-    background: none;
+	background: none;
 }
 
 .listingarea .innerpagesearch {
-    z-index: auto;
-    background: #fff;   padding: 40px 15px 30px;
+	z-index: auto;
+	background: #fff;
+	padding: 40px 15px 30px;
 }
-.listingarea .innersearch{background: none;}
 
-.listingarea .innersearch .formsearchlisting{padding: 0;}
+.listingarea .innersearch {
+	background: none;
+}
 
-.inputwithicon{ position:relative; }
+.listingarea .innersearch .formsearchlisting {
+	padding: 0;
+}
 
-.listingarea .formsearchlisting fieldset{
+.inputwithicon {
+	position: relative;
+}
+
+.listingarea .formsearchlisting fieldset {
 	padding: 0;
 	height: auto;
 }
 
 .listingarea .formsearchlisting fieldset:after,
-.listingarea .formsearchlisting fieldset:before{
+.listingarea .formsearchlisting fieldset:before {
 	clear: both;
 	content: '';
 	display: block;
 }
 
-.listingarea .formsearchlisting fieldset:first-child{
+.listingarea .formsearchlisting fieldset:first-child {
 	width: auto;
 	float: none;
 	clear: both;
 	margin: 0 -10px;
 }
 
-.listingarea .formsearchlisting fieldset:first-child .form-group{
+.listingarea .formsearchlisting fieldset:first-child .form-group {
 	padding: 0 10px;
 	border: 0 !important;
 }
-.listingarea .formsearchlisting fieldset:first-child .form-group i{left: 10px;}
 
-.listingarea .formsearchlisting fieldset:nth-child(3){padding: 0 0 30px;}
+.listingarea .formsearchlisting fieldset:first-child .form-group i {
+	left: 10px;
+}
 
-.listingarea .formsearchlisting .form-group .form-control{
+.listingarea .formsearchlisting fieldset:nth-child(3) {
+	padding: 0 0 30px;
+}
+
+.listingarea .formsearchlisting .form-group .form-control {
 	height: 60px;
 	padding: 15px 15px 15px 50px
 }
-.listingarea .placesposts{
+
+.listingarea .placesposts {
 	width: auto;
 	float: none;
 	clear: both;
@@ -70,66 +87,73 @@
 	padding: 15px 15px 100px;
 }
 
-.listingarea .formsearchlisting fieldset:nth-child(3) .selection{
+.listingarea .formsearchlisting fieldset:nth-child(3) .selection {
 	float: none;
 	width: 200px;
 	vertical-align: top;
 	display: inline-block;
 }
 
-.listingarea .formsearchlisting fieldset:nth-child(3) .selection select{
+.listingarea .formsearchlisting fieldset:nth-child(3) .selection select {
 	height: 40px;
 	padding: 0 20px;
 	line-height: 38px;
 }
 
-.innerpagesearch{
+.innerpagesearch {
 	z-index: 11;
 	width: 100%;
 	float: left;
 	position: relative;
 }
 
-.innersearch{
+.innersearch {
 	width: 100%;
 	float: left;
 }
-.innersearch .formsearchlisting {padding: 33px 8%;}
 
-.formtheme{
-	width:100%;
-	float:left;
+.innersearch .formsearchlisting {
+	padding: 33px 8%;
 }
 
-.formtheme fieldset{
-	border:0;
-	margin:0;
-	padding:0;
-	width:100%;
-	float:left;
-	position:relative;
+.formtheme {
+	width: 100%;
+	float: left;
 }
 
-.formsearchlisting {padding: 0 8%;}
+.formtheme fieldset {
+	border: 0;
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	float: left;
+	position: relative;
+}
 
-.formsearchlisting fieldset{
+.formsearchlisting {
+	padding: 0 8%;
+}
+
+.formsearchlisting fieldset {
 	height: 60px;
 	background: #fff;
 	position: relative;
 	-webkit-border-radius: 30px;
-			border-radius: 30px;
+	border-radius: 30px;
 	padding: 0 200px 0 0;
 }
 
-.formsearchlisting .form-group{
+.formsearchlisting .form-group {
 	margin: 0;
 	float: left;
 	width: 33.33%;
 }
 
-.formsearchlisting .form-group + .form-group{border-left: 1px solid #cacaca;}
+.formsearchlisting .form-group+.form-group {
+	border-left: 1px solid #cacaca;
+}
 
-.formsearchlisting .form-group i{
+.formsearchlisting .form-group i {
 	padding: 0;
 	width: 45px;
 	height: 60px;
@@ -137,18 +161,24 @@
 	line-height: 60px;
 }
 
-.formsearchlisting .form-group .selection:after{display: none;}
+.formsearchlisting .form-group .selection:after {
+	display: none;
+}
 
-.formsearchlisting .form-group .selectlocation:after{
+.formsearchlisting .form-group .selectlocation:after {
 	display: block;
 	line-height: 60px;
 }
 
-.formsearchlisting .form-group .selection select{border: "0.5px"}
+.formsearchlisting .form-group .selection select {
+	border: "0.5px"
+}
 
-.formsearchlisting .form-group:nth-child(3){padding: 0 10px 0 45px;}
+.formsearchlisting .form-group:nth-child(3) {
+	padding: 0 10px 0 45px;
+}
 
-.formsearchlisting .form-group p{
+.formsearchlisting .form-group p {
 	margin: 0;
 	float: left;
 	width: auto;
@@ -157,66 +187,82 @@
 }
 
 .haslayout {
-	width:100%;
-	float:left;
+	width: 100%;
+	float: left;
 }
-.inputwithicon .form-control{
-	z-index:1;
-	position:relative;
+
+.inputwithicon .form-control {
+	z-index: 1;
+	position: relative;
 	padding: 12px 20px 12px 50px;
 }
+
 .form-group {
 	width: 100%;
 	float: left;
-	margin:0 0 20px;
+	margin: 0 0 20px;
 }
+
 .pagination {
-	width:100%;
+	width: 100%;
 	float: left;
 	padding: 30px 0 0;
 	text-align: center;
-	font:14px/38px 'Saira', Arial, Helvetica, sans-serif;
+	font: 14px/38px 'Saira', Arial, Helvetica, sans-serif;
 }
+
 .pagination ul {
-	margin:0;
-	padding:0;
+	margin: 0;
+	padding: 0;
 	width: 100%;
-	float:right;
-	list-style:none;
+	float: right;
+	list-style: none;
 	text-align: center;
 	line-height: inherit;
 }
+
 .pagination ul li {
-	margin:0 2px;
+	margin: 0 2px;
 	line-height: inherit;
-	list-style-type:none;
+	list-style-type: none;
 	vertical-align: top;
 	display: inline-block;
 }
-.pagination ul li.prevpage { margin-left:0; }
-.pagination ul li.nextpage { margin-right:0; }
-.pagination ul li a{
-	width:40px;
-	display:block;
+
+.pagination ul li.prevpage {
+	margin-left: 0;
+}
+
+.pagination ul li.nextpage {
+	margin-right: 0;
+}
+
+.pagination ul li a {
+	width: 40px;
+	display: block;
 	color: #484848;
 	background: #fff;
-	text-align:center;
-	position:relative;
+	text-align: center;
+	position: relative;
 	line-height: inherit;
 	border: 1px solid #ddd;
 	-webkit-border-radius: 50%;
-			border-radius: 50%;
+	border-radius: 50%;
 }
-.pagination ul li a i{
+
+.pagination ul li a i {
 	display: block;
 	line-height: inherit;
 }
+
 .pagination ul li a:hover,
 .pagination ul li a:hover i,
 .pagination ul li.active a,
-.pagination ul li.active a i{background-color: #6fbf17;}
+.pagination ul li.active a i {
+	background-color: #6fbf17;
+}
 
-.inputwithicon i{
+.inputwithicon i {
 	top: 0;
 	left: 0;
 	z-index: 2;
@@ -230,11 +276,11 @@
 }
 
 .selection {
-	color:#666;
-	float:left;
+	color: #666;
+	float: left;
 	width: 100%;
 	position: relative;
-	text-transform:uppercase;
+	text-transform: uppercase;
 }
 
 .selection:after {
@@ -260,24 +306,30 @@
 	-webkit-appearance: none;
 }
 
-.selection select option { color:#666; }
+.selection select option {
+	color: #666;
+}
 
-.content{
+.content {
 	width: 100%;
 	float: left;
 }
 
-.listing{overflow: hidden;}
+.listing {
+	overflow: hidden;
+}
 
-.mapclustring{
+.mapclustring {
 	width: 50%;
 	float: right;
 	will-change: min-height;
 }
 
-.mapclustring.is_stuck{top: 80px;}
+.mapclustring.is_stuck {
+	top: 80px;
+}
 
-.maparea{
+.maparea {
 	width: 100%;
 	float: left;
 	overflow: hidden;
@@ -299,7 +351,7 @@
 	font-size: 15px !important;
 	line-height: 59px !important;
 	-webkit-background-size: auto auto !important;
-			background-size: auto !important;
+	background-size: auto !important;
 	background-position: center !important;
 	font: 400 16px/59px 'Saira', Arial, Helvetica, sans-serif;
 }
@@ -309,8 +361,8 @@
 	width: 85px;
 	height: 14px;
 	float: left;
-	line-height:14px;
-	position:relative;
+	line-height: 14px;
+	position: relative;
 }
 
 .stars span:after,
@@ -321,26 +373,28 @@
 	line-height: 14px;
 	position: absolute;
 	letter-spacing: 4px;
-	color:#ffa127 !important;
+	color: #ffa127 !important;
 	font-family: 'FontAwesome';
 	color: rgba(218, 218, 218, .8);
 	content: '\f006 \f006 \f006 \f006 \f006';
 }
 
 .stars span {
-	width:75%;
+	width: 75%;
 	overflow: hidden;
 }
 
-.stars span:after {content: '\f005 \f005 \f005 \f005 \f005';}
+.stars span:after {
+	content: '\f005 \f005 \f005 \f005 \f005';
+}
 
-.reviewcategory{
+.reviewcategory {
 	width: 100%;
 	float: left;
 	padding: 0 0 30px;
 }
 
-.review{
+.review {
 	float: left;
 	color: #5c5c5c;
 	padding: 3px 0;
@@ -349,14 +403,16 @@
 }
 
 .review span,
-.review em{
+.review em {
 	float: left;
 	font-style: normal;
 }
 
-.review em{padding: 0 0 0 5px;}
+.review em {
+	padding: 0 0 0 5px;
+}
 
-.reviewcategory .review{
+.reviewcategory .review {
 	width: auto;
 	float: none;
 	padding-bottom: 0;
@@ -364,36 +420,38 @@
 	display: inline-block;
 }
 
-.themeposts{
+.themeposts {
 	width: 100%;
 	float: left;
 	margin: -15px 0;
 }
 
-.themepost{
+.themepost {
 	width: 100%;
 	float: left;
 	margin: 15px 0;
 }
 
-.featuredimg{
+.featuredimg {
 	margin: 0;
 	width: 100%;
 	float: left;
 	overflow: hidden;
 	position: relative;
 	-webkit-border-radius: 10px;
-			border-radius: 10px;
+	border-radius: 10px;
 }
 
-.featuredimg > a{
+.featuredimg>a {
 	color: #fff;
 	display: block;
 }
 
-.featuredimg > a:hover{color: #fff;}
+.featuredimg>a:hover {
+	color: #fff;
+}
 
-.featuredimg img{
+.featuredimg img {
 	z-index: 1;
 	width: 100%;
 	height: auto;
@@ -401,29 +459,35 @@
 	position: relative;
 }
 
-.placesposts{margin: -15px 0 20px;}
+.placesposts {
+	margin: -15px 0 20px;
+}
 
-.placespost .featuredimg{
+.placespost .featuredimg {
 	-webkit-border-radius: 10px 10px 0 0;
 	border-radius: 10px 10px 0 0;
 }
 
-.placespost .postcontent{
+.placespost .postcontent {
 	background: #fff;
 	padding: 30px 20px 0;
 }
 
-.placespost .postcontent .description{padding: 20px 0;}
+.placespost .postcontent .description {
+	padding: 20px 0;
+}
 
-.placespost .postcontent .description p{margin: 0;}
+.placespost .postcontent .description p {
+	margin: 0;
+}
 
-.placesposts.gridview .placespost{
+.placesposts.gridview .placespost {
 	width: 50%;
 	float: left;
 	padding: 15px;
 }
 
-.category{
+.category {
 	float: right;
 	color: #5c5c5c;
 	font-size: 12px;
@@ -431,28 +495,32 @@
 }
 
 .category i,
-.category span{float: left;}
+.category span {
+	float: left;
+}
 
-.category i{
+.category i {
 	font-size: 20px;
 	margin: 0 10px 0 0;
 }
 
-.themepostfoot a{color: #212121;}
+.themepostfoot a {
+	color: #212121;
+}
 
 .themepostfoot i,
-.themepostfoot span{
+.themepostfoot span {
 	vertical-align: top;
 	display: inline-block;
 	line-height: inherit;
 }
 
-.themepostfoot i{
+.themepostfoot i {
 	font-size: 22px;
 	padding: 0 5px 0 0;
 }
 
-.themepostfoot{
+.themepostfoot {
 	clear: both;
 	margin: 0 -20px;
 	font-size: 12px;
@@ -460,24 +528,26 @@
 	border-top: 1px solid #ddd;
 }
 
-.themepostfoot:after{
+.themepostfoot:after {
 	content: '';
 	clear: both;
 	display: block;
 }
 
-.location{
+.location {
 	float: left;
 	color: #5c5c5c;
 	padding: 0 0 0 15px;
 }
 
 .location i,
-.location em{
+.location em {
 	float: left;
 	color: #5c5c5c;
 	font-style: normal;
 	line-height: inherit;
 }
 
-.location i{font-size: 26px;}
+.location i {
+	font-size: 26px;
+}
