Kullanıcının favorileri mekanları gösteren ekran

--- a/where/src/css/style.css
+++ b/where/src/css/style.css
@@ -62,8 +62,9 @@ a {
 a:hover,
 a:focus,
 a:active {
-  outline: none;
-  text-decoration: none;
+  outline: none !important;
+  text-decoration: none !important;
+  color: #6fbf17 !important;
 }
 ul {
   margin: 0;
