--- a/where/src/css/Dashboard/header.css
+++ b/where/src/css/Dashboard/header.css
@@ -1,10 +1,10 @@
-.listar-dashboardbanner {
+.dashboardbanner {
   width: 100%;
   float: left;
   padding: 70px 60px;
   color: #fff;
 }
-.listar-description {
+.description {
   width: 100%;
   float: left;
 }
