--- a/where/src/css/style.css
+++ b/where/src/css/style.css
@@ -87,7 +87,7 @@ button {
 }
 textarea,
 select,
-.listar-select select,
+.select select,
 .form-control,
 input[type="text"],
 input[type="password"],
@@ -180,4 +180,34 @@ a {
 .btn:focus {
   outline: none;
   box-shadow: none;
+}
+.haslayout {
+  width: 100%;
+  float: left;
+}
+.detail .review span {
+  width: 100px;
+}
+.stars span:after,
+.stars:before {
+  top: 0;
+  left: 0;
+  font-size: 14px;
+  line-height: 14px;
+  position: absolute;
+  letter-spacing: 4px;
+  color: #ffa127 !important;
+  font-family: "FontAwesome";
+  color: rgba(218, 218, 218, 0.8);
+  content: "\f006 \f006 \f006 \f006 \f006";
+}
+.stars span:after {
+	content: '\f005 \f005 \f005 \f005 \f005';
+}
+.themepostfoot {
+  clear: both;
+  margin: 0 -20px;
+  font-size: 12px;
+  line-height: 44px;
+  border-top: 1px solid #ddd;
 }
