--- a/where/src/css/Place/placeDetail.css
+++ b/where/src/css/Place/placeDetail.css
@@ -73,6 +73,7 @@ img {
   border-radius: 50%;
   text-align: center;
   position: absolute;
+  background: #2457cf;
 }
 .detail .postcontent h1 {
   margin: 0 30px;
