PrevNext and processbar complete

--- a/where/src/css/pagination.css
+++ b/where/src/css/pagination.css
@@ -1,64 +1,93 @@
 .pagination {
-    width: 100%;
-    float: left;
-    padding: 30px 0 0;
-    text-align: center;
-    font: 14px/38px 'Saira', Arial, Helvetica, sans-serif;
+  width: 100%;
+  float: left;
+  padding: 30px 0 0;
+  text-align: center;
+  font: 14px/38px "Saira", Arial, Helvetica, sans-serif;
 }
 
 .pagination ul {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    float: right;
-    list-style: none;
-    text-align: center;
-    line-height: inherit;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  float: right;
+  list-style: none;
+  text-align: center;
+  line-height: inherit;
 }
 
 .pagination ul li {
-    margin: 0 2px;
-    line-height: inherit;
-    list-style-type: none;
-    vertical-align: top;
-    display: inline-block;
+  margin: 0 2px;
+  line-height: inherit;
+  list-style-type: none;
+  vertical-align: top;
+  display: inline-block;
 }
 
 .pagination ul li.prevpage {
-    margin-left: 0;
+  margin-left: 0;
 }
 
 .pagination ul li.nextpage {
-    margin-right: 0;
+  margin-right: 0;
 }
 
 .pagination ul li a {
-    width: 40px;
-    display: block;
-    color: #484848;
-    background: #fff;
-    text-align: center;
-    position: relative;
-    line-height: inherit;
-    border: 1px solid #ddd;
-    -webkit-border-radius: 50%;
-    border-radius: 50%;
+  width: 40px;
+  display: block;
+  color: #484848;
+  background: #fff;
+  text-align: center;
+  position: relative;
+  line-height: inherit;
+  border: 1px solid #ddd;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
 }
 
 .pagination ul li a i {
-    display: block;
-    line-height: inherit;
+  display: block;
+  line-height: inherit;
 }
 
 .pagination ul li a:hover,
 .pagination ul li a:hover i,
 .pagination ul li.active a,
 .pagination ul li.active a i {
-    color: #fff;
+  color: #fff;
 }
 
 .pagination ul li a:hover,
 .pagination ul li.active a {
-    border-color: #6fbf17;
-    background-color: #6fbf17;
+  border-color: #6fbf17;
+  background-color: #6fbf17;
+}
+.addlistingsteps .actions {
+  width: 100%;
+  float: left;
+}
+.addlistingsteps .actions ul {
+  width: 100%;
+  float: left;
+  list-style: none;
+}
+.addlistingsteps .actions ul li {
+  float: left;
+  list-style-type: none;
+}
+.addlistingsteps .actions ul li a {
+  color: #fff;
+  padding: 0 40px;
+  position: relative;
+  text-align: center;
+  display: inline-block;
+  vertical-align: middle;
+  border: 1px solid #fff;
+  text-transform: capitalize;
+  -webkit-border-radius: 22px;
+  border-radius: 22px;
+  font: 400 14px/42px "Saira", Arial, Helvetica, sans-serif;
+}
+.addlistingsteps .actions ul li + li {
+  float: right;
 }
