--- a/where/src/css/login_register.css
+++ b/where/src/css/login_register.css
@@ -80,7 +80,7 @@ button:focus {
 .formtheme {
   width: 100%;
   float: left;
-  padding: 70px 0 0;
+  padding: 10px 0 0;
 }
 .formtheme fieldset {
   border: 0;
@@ -327,4 +327,7 @@ button {
   -ms-transition: all 300ms ease-in-out;
   -o-transition: all 300ms ease-in-out;
   transition: all 400ms ease-in-out;
+}
+.text-transform_none {
+  text-transform: none !important;
 }
