--- a/where/src/css/Dashboard/dashboard.css
+++ b/where/src/css/Dashboard/dashboard.css
@@ -2,5 +2,6 @@
   padding: 30px;
   width: 100%;
   float: left;
-  background-color: #1E202D;
+  background-color: #1e202d;
+  /* height: 100vh; */
 }
