--- a/where/src/css/Dashboard/content.css
+++ b/where/src/css/Dashboard/content.css
@@ -1,7 +1,3 @@
-.content {
-  width: 100%;
-  float: left;
-}
 .formtheme {
   width: 100%;
   float: left;
@@ -131,4 +127,245 @@
   border-color: #6fbf17;
   color: #fff !important;
   background-color: #6fbf17;
+}
+
+/*
+* Add Listing
+*/
+.addlistingsteps section {
+  width: 100%;
+  float: left;
+}
+.dashboardfield {
+  width: 100%;
+  float: left;
+  margin: 0 0 30px;
+}
+.formaddlisting fieldset.listing{
+  overflow: hidden;
+  background: #fff;
+  border-radius: 15px;
+  padding: 30px 30px 0 !important;
+  border: 0;
+  margin-top: 10px;
+  width: 100%;
+  float: left;
+  position: relative;
+}
+
+.dashboardfield label,
+.businesshours li label {
+  width: 100%;
+  float: left;
+  color: #222;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 16px;
+  margin: 0 0 10px;
+}
+
+.dashboardfield .form-control,
+.dashboardfield .select select,
+.businesshours li .select select {
+  color: #666;
+  border-radius: 10px;
+  border-color: #dadada;
+}
+.tinymceeditor {
+  padding: 0;
+  width: 100%;
+  float: left;
+  resize: none;
+  border-radius: 0;
+  border-color: #dadada;
+  max-height: 150px;
+  min-height: 120px;
+  resize: none;
+  padding: 9px;
+  box-sizing: border-box;
+  font-size: 15px;
+}
+.amenities li,
+.openinghoursarea .openinghours li {
+  padding: 0;
+  width: 100%;
+  float: left;
+  margin: 10px 0;
+  position: relative;
+  line-height: inherit;
+  list-style-type: none;
+}
+.amenities li {
+  margin: 0;
+  width: auto;
+  padding: 3px;
+}
+
+.amenities li a {
+  color: #fff;
+  display: block;
+  padding: 0 15px;
+  font-size: 12px;
+  line-height: 26px;
+  border-radius: 4px;
+  background: #909090;
+}
+.amenities li .amenity_button {
+  color: #fff;
+  display: block;
+  padding: 0 15px;
+  font-size: 12px;
+  line-height: 26px;
+  border-radius: 4px;
+  background: #9091E3;
+}
+.amenities li .amenity_button.done {
+  background: #6fbf17;
+}
+.amenities,
+.openinghoursarea .openinghours {
+  padding: 0;
+  width: 100%;
+  float: left;
+  color: #5c5c5c;
+  font-size: 14px;
+  line-height: 18px;
+  list-style: none;
+}
+.amenities {
+  padding: 7px;
+  border-radius: 10px;
+  border: 1px solid #dadada;
+}
+
+/*
+Business Hours
+*/
+.businesshours li {
+  float: left;
+  width: 14.285%;
+  padding: 0 15px;
+  margin: 0 0 30px;
+  list-style-type: none;
+}
+.select {
+  color: #666;
+  float: left;
+  width: 100%;
+  position: relative;
+  text-transform: uppercase;
+}
+.select select {
+  z-index: 1;
+  width: 100%;
+  position: relative;
+  appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+}
+.select:after {
+  top: 0;
+  right: 15px;
+  z-index: 2;
+  color: #666;
+  display: block;
+  content: "\f107";
+  position: absolute;
+  text-align: center;
+  font-size: inherit;
+  line-height: 40px;
+  font-family: "FontAwesome";
+}
+.dashboardfield .select:after,
+.businesshours li .select:after {
+  color: #666;
+  line-height: 50px;
+}
+.businesshours li .select + .select {
+  margin: 15px 0 0;
+}
+/*
+Pricing
+*/
+.slot {
+  width: 100%;
+  float: left;
+  padding: 0 60px;
+  position: relative;
+  line-height: inherit;
+  list-style-type: none;
+}
+.sortable {
+  width: 100%;
+  float: left;
+  font-size: 36px;
+  line-height: 50px;
+}
+.arangeslot {
+  top: 26px;
+  left: 15px;
+  width: 48px;
+  height: 48px;
+  cursor: pointer;
+  overflow: hidden;
+  position: absolute;
+  border-radius: 5px;
+}
+.float_left {
+  float: left;
+}
+.dashboardfield .inputwithicon > span {
+  top: 0;
+  right: 0;
+  z-index: 2;
+  width: 50px;
+  font-size: 12px;
+  line-height: 50px;
+  color: #8c8c8c;
+  text-align: center;
+  position: absolute;
+}
+.dashboardfield .inputwithicon {
+  width: 100%;
+  float: left;
+}
+.btndelete {
+  z-index: 2;
+  right: 15px;
+  bottom: 15px;
+  width: 40px;
+  height: 50px;
+  color: #222;
+  display: block;
+  cursor: pointer;
+  overflow: hidden;
+  font-size: 36px;
+  line-height: 50px;
+  position: absolute;
+  text-align: center;
+}
+.btndelete i {
+  display: block;
+  font-size: inherit;
+  line-height: inherit;
+}
+.btnarea {
+  width: 100%;
+  float: left;
+  padding: 30px 10px 30px;
+}
+.btnadd {
+  color: #fff !important;
+  float: left !important;
+  width: 40px !important;
+  height: 40px !important;
+  font-size: 18px !important;
+  overflow: hidden !important;
+  text-align: center !important;
+  border-radius: 50% !important ;
+  background: #2457cf !important;
+}
+.btnadd:hover,
+.btnadd:focus {
+  color: #fff !important;
 }
