--- a/where/src/css/icon.css
+++ b/where/src/css/icon.css
@@ -8,7 +8,6 @@
   font-weight: normal;
   font-style: normal;
 }
-
 [class^="icon-"],
 [class*=" icon-"] {
   font-family: "icomoon" !important;
@@ -24,83 +23,63 @@
 .icon-lock-stripes:before {
   content: "\ea34";
 }
-
 .icon-profile-male:before {
   content: "\e040";
 }
-
 .icon-icons185:before {
   content: "\e911";
 }
-
 .icon-global:before {
   content: "\e052";
 }
-
 .icon-layers:before {
   content: "\e031";
 }
-
 .icon-nightlife:before {
   content: "\efdb";
 }
-
 .icon-nightlife:before {
   content: "\efdb";
 }
-
 .icon-education:before {
   content: "\efd6";
 }
-
 .icon-shopping:before {
   content: "\efdc";
 }
-
 .icon-coffee2:before {
   content: "\efe3";
 }
-
 .icon-icons74:before {
   content: "\e908";
 }
-
 .icon-icons208:before {
   content: "\e904";
 }
-
 .icon-user3:before {
   content: "\edb1";
 }
-
 .icon-phone2:before {
   content: "\e935";
 }
-
 .icon-phone3:before {
   content: "\e004";
 }
-
 .icon-world:before {
   content: "\e94d";
 }
-
 .icon-icons74:before {
   content: "\e908";
 }
-
 .icon-smiling-face:before {
   content: "\eb7e";
 }
-
 .icon-plus:before {
   content: "\eef0";
 }
-
 .icon-thumb-up2:before {
   content: "\ebfc";
 }
-
 .icon-alarmclock:before {
   content: "\e914";
 }
@@ -130,4 +109,31 @@
 }
 .icon-icons88:before {
   content: "\e90a";
+}
+.icon-layers:before {
+  content: "\e031";
+}
+.icon-global:before {
+  content: "\e052";
+}
+.icon-food:before {
+  content: "\efd8";
+}
+.icon-nightlife:before {
+  content: "\efdb";
+}
+.icon-entertainment:before {
+  content: "\efd7";
+}
+.icon-localservice:before {
+  content: "\efda";
+}
+.icon-healthfitness:before {
+  content: "\efd9";
+}
+.icon-tourism:before {
+  content: "\efdd";
+}
+.icon-money:before {
+  content: "\e93b";
 }
