--- a/where/src/css/contact.css
+++ b/where/src/css/contact.css
@@ -105,7 +105,7 @@
   width: 100%;
   float: left;
   height: 600px;
-  background: url("../images/login.png");
+  background: url("../images/contact.jpg");
 }
 .btn {
   color: #fff !important;
