--- a/where/src/css/listing.css
+++ b/where/src/css/listing.css
@@ -75,6 +75,8 @@
 .listingarea .formsearchlisting .form-group .form-control {
   height: 60px;
   padding: 15px 15px 15px 50px;
+  border-radius: 30px;
+  font-size: 12px;
 }
 
 .listingarea .placesposts {
