Navbar rollere göre güncellendi

--- a/where/src/css/login_register.css
+++ b/where/src/css/login_register.css
@@ -331,3 +331,9 @@ button {
 .text-transform_none {
   text-transform: none !important;
 }
+.dCCEIu {
+  position: absolute !important;
+  z-index: 1000;
+  top: 50px;
+  right: 50px;
+}
