--- a/where/src/css/navbar.css
+++ b/where/src/css/navbar.css
@@ -237,3 +237,48 @@
   line-height: inherit;
   font-family: "FontAwesome";
 }
+.btnuserlogin,
+.userlogin {
+  width: 100%;
+  float: left;
+  color: #222;
+  margin: 1px 0;
+  display: block;
+  font-size: 16px;
+  line-height: 42px;
+}
+.userlogin em {
+  padding: 0 10px 0 15px;
+}
+.dropdown-menu {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 1000;
+  display: none;
+  float: left;
+  min-width: 10rem;
+  padding: 0.5rem 0;
+  margin: 0.125rem 0 0;
+  font-size: 1rem;
+  color: #212529;
+  text-align: left;
+  list-style: none;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  border-radius: 0.25rem;
+}
+.dropdownmen ul:before,
+.dropdownmen ul:after {
+  width: 0;
+  height: 0;
+  top: -14px;
+  left: 19px;
+  z-index: 2;
+  content: "";
+  position: absolute;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-bottom: 14px solid #fff;
+}
