--- a/where/src/css/icon.css
+++ b/where/src/css/icon.css
@@ -128,3 +128,30 @@
 .icon-global:before {
   content: "\e052";
 }
+.icon-speedometer2:before {
+  content: "\e051";
+}
+.icon-profile-male:before {
+  content: "\e040";
+}
+.icon-layers:before {
+  content: "\e031";
+}
+.icon-star4:before {
+  content: "\eda5";
+}
+.icon-heart3:before {
+  content: "\e04a";
+}
+.icon-pencil3:before {
+  content: "\e032";
+}
+.icon1{
+  width: 58px;
+  display: block;
+  font-size: 20px;
+  text-align: center;
+}
+.icon-lock6:before {
+  content: "\edad";
+}
